plugins {
    id 'org.jetbrains.intellij' version '1.7.0'
    id 'java'
}

group 'me.oddlyoko'
version '0.0.3'

repositories {
    mavenCentral()
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
}

// See https://github.com/JetBrains/gradle-intellij-plugin/
intellij {
    version = '2022.2'
    type = 'PC'
    plugins = [
            "PythonCore"
    ]
}

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

test {
    useJUnitPlatform()
}

patchPluginXml {
    sinceBuild = '222.3345.131'
    untilBuild = '222.*'
}
